k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: fron10dash
  labels:
    maintainer: maslick
    project: fron10dash
    app: fron10dash
spec:
  ports:
    - port: 8080
      targetPort: http
  selector:
    maintainer: maslick
    project: fron10dash
    app: fron10dash
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fron10dash
  labels:
    maintainer: maslick
    project: fron10dash
    app: fron10dash
spec:
  replicas: 1
  selector:
    matchLabels:
      maintainer: maslick
      project: fron10dash
      app: fron10dash
  template:
    metadata:
      name: fron10dash
      labels:
        maintainer: maslick
        project: fron10dash
        app: fron10dash
    spec:
      containers:
        - image: maslick/fron10dash
          imagePullPolicy: Always
          name: fron10dash
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 100m
              memory: 512Mi
