k8s/ingress_dns.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-fron10dash
  labels:
    maintainer: maslick
    project: fron10dash
    app: fron10dash
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: fron10dash.maslick.ru
      http:
        paths:
          - path: /
            backend:
              serviceName: fron10dash
              servicePort: 8080
